--- a/SankeyGraphsForEverything.ipynb
+++ b/SankeyGraphsForEverything.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "ebca35f5-a1e5-409b-9736-daf401d52bc7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f7d9bcce457402dab501fc5f6efbd7e",
+       "model_id": "ff802d1a688d4a7dac412cd345727a70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -285,7 +285,7 @@
     "        )])\n",
     "        \n",
     "        fig.update_layout(\n",
-    "            title_text=\"Persistent Sankey Diagram\",\n",
+    "            title_text=\"Sankey Diagram\",\n",
     "            font_size=12,\n",
     "            height=600\n",
     "        )\n",
